@@ -123,7 +123,16 @@ OUTPUT_JAR="test-pipeline-${RUNNER}-$(date +%Y%m%d-%H%M%S).jar"
 
 if [[ "$TEST_EXIT_CODE" -eq 0 ]]; then
   # Execute the jar
-  java -jar $OUTPUT_JAR || TEST_EXIT_CODE=$?
+  JAVA_ARGS=()
+  if [[ "$RUNNER" = "SparkRunner" ]]; then
+    JAVA_ARGS+=(
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+      "--add-opens=java.base/java.nio=ALL-UNNAMED"
+      "--add-opens=java.base/java.util=ALL-UNNAMED"
+      "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED"
+    )
+  fi
+  java "${JAVA_ARGS[@]}" -jar $OUTPUT_JAR || TEST_EXIT_CODE=$?
 fi
 
 rm -rf $ENV_DIR
